--- a/css/index_max.css
+++ b/css/index_max.css
@@ -542,6 +542,10 @@ header p{
 	color: #1c4279;
 	font-weight: bold;
 }
+.m6_p2 span{
+	color: #982e0d;
+	font-weight: bold;
+}
 .m6_p3 span{
 	color: #982e0d
 }
