--- a/css/index_max.css
+++ b/css/index_max.css
@@ -133,12 +133,11 @@ header p{
 	overflow: hidden;
 	background: url(../images/main2.jpg) no-repeat center;
 }
-.main2 p.m2_p{
+.main2 h2{
 	font-size: 42px;
 	text-align: center;
 	line-height: 42px;
 	color: #fff;
-	font-weight: bold;
 }
 .sbg{
 	background: #1c4279;
