--- a/css/index.css
+++ b/css/index.css
@@ -138,11 +138,12 @@ header p{
 	background: url(../images/main2.jpg) no-repeat center;
 	background-size: 18.0rem 12.675rem;
 }
-.main2 h2{
+.main2 .m2_p{
 	font-size: 1.05rem;
 	text-align: center;
 	line-height: 1.4rem;
 	color: #fff;
+	font-weight: bold;
 }
 .sbg{
 	background: #1c4279;
