--- a/css/index.css
+++ b/css/index.css
@@ -142,6 +142,7 @@ header p{
 	font-size: 1.05rem;
 	text-align: center;
 	line-height: 1.5rem;
+	height: 1.5rem;
 	color: #fff;
 	font-weight: bold;
 }
