--- a/css/index.css
+++ b/css/index.css
@@ -146,6 +146,10 @@ header p{
 	color: #fff;
 	font-weight: bold;
 }
+.main2 h2 span{
+	line-height: 1.55rem;
+	display: inline-block;
+}
 .sbg{
 	background: #1c4279;
 	padding: 0 0.125rem;
