--- a/css/index_max.css
+++ b/css/index_max.css
@@ -136,7 +136,7 @@ header p{
 .main2 h2{
 	font-size: 42px;
 	text-align: center;
-	line-height: 42px;
+	line-height: 56px;
 	color: #fff;
 	font-weight: bold;
 }
@@ -144,6 +144,8 @@ header p{
 	background: #1c4279;
 	padding: 0 5px;
 	margin: 0 5px;
+	line-height: 56px;
+	display: inline-block;
 }
 .m2_p1{
 	font-size: 28px;
