--- a/css/index.css
+++ b/css/index.css
@@ -144,11 +144,13 @@ header p{
 	line-height: 1.4rem;
 	color: #fff;
 	font-weight: bold;
+	padding-top: 0.15rem
 }
 .sbg{
 	background: #1c4279;
 	padding: 0 0.125rem;
 	margin: 0 0.125rem;
+	font-size: 1.05rem
 }
 .m2_p1{
 	font-size: 0.7rem;
