--- a/css/index_max.css
+++ b/css/index_max.css
@@ -137,7 +137,7 @@ header p{
 	font-size: 42px;
 	text-align: center;
 	line-height: 56px;
-	color: #fff;
+	color: #f4fc7b;
 	font-weight: bold;
 }
 .sbg{
