--- a/css/index_max.css
+++ b/css/index_max.css
@@ -133,18 +133,22 @@ header p{
 	overflow: hidden;
 	background: url(../images/main2.jpg) no-repeat center;
 }
-.main2 .m2_p{
-	font-size: 42px;
+.main2 h2{
+	height: 54px;
+	line-height: 54px;
 	text-align: center;
-	line-height: 56px;
-	color: #f4fc7b;
-	font-weight: bold;
-}
-.sbg{
-	background: #1c4279;
-	padding: 0 5px;
-	margin: 0 5px;
 	font-size: 42px;
+	color: #f4fc7b
+}
+.main2 h2 strong{
+	font-size: 54px;
+}
+.main2 h2 span{
+	background: #1c4279;
+	display: inline-block;
+	margin-left: 5px;
+	padding: 0 5px;
+	color: #f4fc7b;
 }
 .m2_p1{
 	font-size: 28px;
