--- a/css/index.css
+++ b/css/index.css
@@ -139,11 +139,11 @@ header p{
 	background-size: 18.0rem 12.675rem;
 }
 .main2 h2{
-	height: 1.35rem;
-	line-height: 1.35rem;
+	height: 3.35rem;
+	line-height: 3.35rem;
 	text-align: center;
 	font-size: 1.05rem;
-	color: #f4fc7b
+	color: #f4fc7b;
 }
 .main2 h2 strong{
 	font-size: 1.35rem;
